[gd_scene load_steps=2 format=3 uid="uid://fqsxkbs42p2p"]

[ext_resource type="Script" path="res://scenes/TablesContainer.gd" id="1_nwx3g"]

[node name="TablesContainer" type="GridContainer"]
offset_right = 608.0
offset_bottom = 464.0
columns = 2
script = ExtResource("1_nwx3g")

[node name="BasicInfoContainer" type="VBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BasicInfoContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="Jugadores" type="Label" parent="BasicInfoContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jugadores"
clip_text = true

[node name="Puntajes" type="Label" parent="BasicInfoContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Puntajes"

[node name="ScrollContainer" type="ScrollContainer" parent="BasicInfoContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoContainer" type="VBoxContainer" parent="BasicInfoContainer/ScrollContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NamesContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3

[node name="PointsContainer" type="VBoxContainer" parent="ScrollContainer2"]
unique_name_in_owner = true
layout_mode = 2
